# object_detection

./: CMakeLists.txt  README.md  manifest.xml
detection_3d_test/: CMakeLists.txt
detection_3d_test/scans/: color_scene1.ply  color_scene5.ply  objects_color2.ply~  scan_test.ply  scan_test2.ply  scan_test3.ply  scene2.ply  scene3.ply  scene4.ply  scene5.ply  scene6.ply  scene7.ply  scene8.ply  scene9.ply
detection_3d_test/src/: detection_3D_test.cpp
ros_detection_test/: CMakeLists.txt
ros_detection_test/src/: ros_detection_test.cpp
src/: Blob.hpp  BlobDetection.cpp  BlobDetection.hpp  CMakeLists.txt  Component.cpp  Component.hpp  CompoundObject.cpp  CompoundObject.hpp  Configuration.hpp  Hole.cpp  Hole.hpp  Objects.hpp  Plane.cpp  Plane.hpp  PointCloudConfiguration.hpp  PointCloudDetection.cpp  PointCloudDetection.hpp  Pose.hpp  SpacebotBase.cpp  SpacebotBase.hpp  SpacebotBattery.cpp  SpacebotBattery.hpp  SpacebotCylinder.cpp  SpacebotCylinder.hpp
test/: CMakeLists.txt  test_3D_Detection.cpp  test_BlobDetect.cpp
viz/: CMakeLists.txt  PrimitiveObjectVisualization.cpp  PrimitiveObjectVisualization.hpp  object_detection-viz.pc.in  vizkit_plugin.rb
